--- a/src/sass/elements/_wordpress.scss
+++ b/src/sass/elements/_wordpress.scss
@@ -70,10 +70,52 @@ a img.aligncenter {
 
 
 #wpadminbar  {
-    overflow: hidden;
     @media (max-width:  $screen-sm) {
 	position: fixed;
     }
+    /* Our wpadminbar shows in prod too much from plugins and other settings, 
+       that is only used in dev use cases.
+       Therfor I take some less important things out of the view, igf the screen
+       is too small
+       */
+    #wp-admin-bar-rrze-multilang-user-locale,
+    #wp-admin-bar-tm-suspend,
+    #wp-admin-bar-my-account,
+    #wp-admin-bar-search,
+    #wp-admin-bar-query-monitor,
+    #wp-admin-bar-fau-degree-program-invalidate-cache,
+    #wp-admin-bar-comments {
+	display: none;
+    }
+    @media (min-width: $screen-sm) {
+	#wp-admin-bar-rrze-multilang-user-locale,
+	#wp-admin-bar-query-monitor {
+	    display: inline-block;
+	}
+    }
+    @media (min-width: $screen-lg) {
+	#wp-admin-bar-tm-suspend {
+	    display: inline-block;
+	}
+    }
+    
+    @media (min-width: $screen-xl) {
+	#wp-admin-bar-search{
+	    display: inline-block;
+	}
+    }
+    @media (min-width: $screen-xxl) {
+	#wp-admin-bar-my-account,
+	#wp-admin-bar-fau-degree-program-invalidate-cache,
+	#wp-admin-bar-comments {
+	    display: inline-block;
+	}
+    }
+    #wp-admin-bar-top-secondary > li {
+	background-color: #1d2327;
+    }
+    
+    
 }
 
 @media (max-width: $screen-xs - 1) {
