#1252 add padding on header when admin bar is shown

--- a/src/sass/elements/_wordpress.scss
+++ b/src/sass/elements/_wordpress.scss
@@ -137,3 +137,7 @@ p.has-drop-cap {
 .wp-container-6  .wp-block-column {
     width: 50%;
 }
+
+body.admin-bar #headerwrapper {
+    padding-top: 15px ;
+}
