--- a/src/sass/structure/header/_meta.scss
+++ b/src/sass/structure/header/_meta.scss
@@ -47,11 +47,12 @@
 }
 
 #headerwrapper {
-    position: static;
-    width: 100%;
-    top: 0;
-    z-index: 150;
+ 
     transition: box-shadow 0.2s;
+
+
+    
+
 
     .admin-bar & {
         top: $wordpress-adminbar-bigheight;
@@ -71,5 +72,29 @@
             top: 0;
         }
     }
+}
+
+/* Default header state */
+
+.header-static {
+    position: static;
+    top: auto;
+    padding-top: 0;
+    z-index: 150;
+}
+
+/* Sticky header state */
+.header-sticky {
+    position: sticky;
+    top: 0;
+    padding-top: 0;
+    z-index: 150; /* Initial state, will be adjusted if admin bar is present */
+}
+
+/* Hidden header state */
+.header-hidden {
+    position: sticky;
+    top: -400px !important; /* Adjust as needed to fully hide the header */
+ 
 }
 
