finetuning icons bei fau-person plugin

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -84,7 +84,7 @@ $color-content-headlines:   map-get($colormap-misc, "Text");
 $color-links:		    map-get($colormap-misc, "Text");
 $color-content-links:	    map-get($colormap-misc, "Text");
 $color-content-links-underline:	    map-get($colormap-primary, "ci-hell");
-$color-content-links-hover: map-get($colormap-primary, "ci-hell-kontrast");
+$color-content-links-hover: map-get($colormap-primary, "ci-hell");
 
 
 // Footer
