--- a/src/sass/plugins/_fau-person.scss
+++ b/src/sass/plugins/_fau-person.scss
@@ -5,19 +5,16 @@
 @use "sass:math";
 
 
-
-
 .fau-person,
 .person {
-    .contactlist a,
     .person-info a {
-		@include defaultlinkstyle();
-		text-decoration: none;
-		&:active,
-		&:hover,
-		&:focus {
-			text-decoration: underline;
-		}
+	@include defaultlinkstyle();
+	text-decoration: none;
+	&:active,
+	&:hover,
+	&:focus {
+		text-decoration: underline;
+	}
     }
     .person-info-more a.standard-btn {
          @include ghostbutton();
@@ -25,14 +22,13 @@
 
     h3, h4, h5 {
 	a {
-	     text-decoration: none;
-	     &:hover, 
+	    text-decoration: none;
+	    &:hover, 
 	    &:focus {
-		    text-decoration: underline;
-		}
+		text-decoration: underline;
+	    }
 	}
 	
-
     }
 	h3, h3 span {
 	    @include px2rem($font-size-h3-small);
@@ -92,8 +88,7 @@
 		padding: 0px;
 	    }
 	    
-	    li, li a, li a::before {
-		
+	    li, li a, li a::before {	
 		width: var(--icon-size) !important;
 		height: var(--icon-size) !important;
 		line-height: inherit !important;
@@ -168,15 +163,11 @@
 	    }
 	}
 
-	
 	li {
-
-		background-position: left 5px;
+	    background-position: left 5px;
 	}
 	
-	
-	
-		
+
 	.accordion & {
 	    padding: 0;
 	    border: none;
@@ -226,7 +217,6 @@
 	}
 	
 
-	
 	.person-info-position {
 	    font-weight: bold;
 	}
@@ -248,31 +238,27 @@
 
 }
 
-
-
-
-
 .widget .person {
     ul.person-info ul {
-		margin: 0 0 10px 25px;
+	margin: 0 0 10px 25px;
     }   
     li.person-info-address,
     li.person-info-description,
     li.person-info-office {
-		display: block;
-		margin-top: 10px;
+	display: block;
+	margin-top: 10px;
     }
     li.person-info-address {
-		margin-bottom: 5px;
+	margin-bottom: 5px;
     }
     
     div[itemprop="contactPoint"] {
-		margin-top: 10px;
+	margin-top: 10px;
     }
     
     h2, h3 {
-		padding-top: 0;
-		margin-top: 0;
+	padding-top: 0;
+	margin-top: 0;
     }
     
 }
@@ -284,7 +270,6 @@
 .portalpage-content,
 .content-inline {
     .fau-person {
-	.contactlist,
 	p {
 	    a {
 		@include defaultlinkstyle();
@@ -371,7 +356,7 @@
 	width: calc(100% - 215px);
 	max-width: 150px;
 	
-	margin-right: ceil(math.div($grid-gutter-width, 2));    
+	margin-right: var(--width-gutter-half);    
 	padding: 0;
 	img {
 	    width: 100%;
@@ -436,69 +421,92 @@
 
 
 // Personen-Page - 
-//  Entweder via SHortcode format="page" oder bei AUfruf des Endpoints aus single-person.php
+//  Entweder via Shortcode format="page" oder bei AUfruf des Endpoints aus single-person.php
 .fau-person {
-    
-	.person-meta {
-		display: flex;	
+        
 	
-		.person-image {
-			flex: 1 1 200px;
-			order: 2;
-			
-			img {
-				width: auto;
-			}
-		}
+    .person-meta {
+	display: flex;	
 
-		.person-info {
-			order: 1;
-			flex: 1 0 220px;
-			margin-right: 10px;
+	.person-image {
+		flex: 1 1 200px;
+		order: 2;
+
+		img {
+			width: auto;
 		}
+	}
+
+	.person-info {
+		order: 1;
+		flex: 1 0 220px;
+		margin-right: 10px;
+	}
     }
+    .contactlist {
+	li {
+	    line-height: 1.7rem;
+	}
+	a {
+	    --_icon-size: var(--icon-size, 1rem);
+	    --_icon-color: var(--icon-color, var(--color-Text));
+	    --_icon-color-hover: var(--icon-color-hover, var(--color-content-links-hover));
+	    --_icon-size-mask: var(--icon-size-mask, 100%);
+	    --_icon-mask-image: var(--icon-mask-image,'none');
 
+	    color: var(--color-content-links);	    
+	    text-decoration: none;
+	    
+	    &:hover,
+	    &focus {
+		color: var(--color-content-links-hover);
+		text-decoration: underline;
+	    }
+	    &::before {
+		@include unset-svg-background-image("important");
+
+		-webkit-mask-image: svg-bookmark();
+		mask-image: svg-bookmark();
+
+		-webkit-mask-size: var(--_icon-size-mask); 
+		mask-size: var(--_icon-size-mask); 
+		-webkit-mask-repeat: no-repeat;
+		mask-repeat: no-repeat;
+		-webkit-mask-position: center;
+		mask-position: center; 	    
+
+		background-color: var(--_icon-color);
+		width: var(--_icon-size);
+		height: var(--_icon-size);
+	    }
+	    &:focus::before, 
+	    &:hover::before {
+		background-color: var(--_icon-color-hover);
+	    }
+	}
+    
 	a[itemprop="telephone"]::before {
-		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 88.1 85.6" style="enable-background:new 0 0 88.1 85.6;" xml:space="preserve"><path d="M84,62.3c-7.5-4.8-14.4-7.7-21.3-8.9c-2.7-0.5-5.5,0.4-7.5,2.3l-4.3,4c-0.3,0.3-0.8,0.4-1.2,0.2c-4.9-2.8-9.5-6.3-13.6-10.4c-3.1-3.1-5.9-6.6-8.3-10.2c-0.3-0.4-0.2-1,0.1-1.3l4.6-4.9c1.9-2,2.7-4.8,2.3-7.5c-1.2-6.9-4.1-13.8-8.9-21.3c-2.1-3.4-6.2-4.9-10-3.7C12.6,1.4,9.2,3.5,5.9,6.5c-4,3.6-6.2,9-5.8,14.5c1,14.9,8.6,30.2,21.4,43.1c13.9,13.9,30.5,21.5,46.2,21.5c1.4,0,2.8-0.1,4.2-0.2c5.8-0.5,10.9-3.7,13.7-8.6c0.9-1.5,1.6-3.1,2.1-4.6C88.9,68.5,87.4,64.4,84,62.3z M83.3,70.9c-0.4,1.2-0.9,2.4-1.7,3.6c-2.1,3.5-5.9,5.9-10.1,6.3c-15.6,1.4-32.6-5.9-46.8-20c-12-12-19.2-26.3-20.1-40.1C4.4,16.6,6,12.6,9,9.9c2.8-2.5,5.6-4.3,8.4-5.1c0.4-0.1,0.7-0.2,1.1-0.2c1.4,0,2.8,0.7,3.5,2c4.4,6.9,7.1,13.4,8.2,19.6c0.2,1.3-0.2,2.6-1.1,3.6l-4.6,4.9c-1.8,1.9-2,4.8-0.6,7.1c2.6,3.9,5.6,7.6,8.9,10.9c4.4,4.4,9.3,8.2,14.6,11.2c2.1,1.2,4.8,0.9,6.7-0.8l4.3-4c1-0.9,2.3-1.3,3.6-1.1c6.3,1.1,12.7,3.8,19.6,8.2C83.1,67.2,83.9,69.1,83.3,70.9z"/></svg>');
-		//background-size: 88%;
+	    mask-image: svg-icon-phone();
 	}
-
 	a[itemprop="email"]::before {
-		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 75.6 58.1" style="enable-background:new 0 0 75.6 58.1;" xml:space="preserve"><g><path d="M63.4,0h-51C5.5,0,0,5.5,0,12.3v33.5c0,6.8,5.5,12.3,12.3,12.3h50.9c6.8,0,12.3-5.5,12.3-12.3V12.3C75.7,5.5,70.2,0,63.4,0z M12.3,3.9h50.9c3.5,0,6.5,2.1,7.9,5.2l-29,21.7c-2.5,1.9-6,1.9-8.6,0.1L4.6,9.1C5.8,6,8.8,3.9,12.3,3.9z M71.8,45.9c0,4.7-3.8,8.4-8.4,8.4h-51c-4.7,0-8.4-3.8-8.4-8.4V13.5l27.4,20.6c1.9,1.5,4.3,2.1,6.6,2.1c2.3,0,4.7-0.8,6.7-2.2l27.3-20.5V45.9z"/></g></svg>');
-		background-size: 90%;
+	    mask-image: svg-icon-mail();
 	}
-
 	a[itemprop="faxNumber"]::before {
-		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 84.5 81" style="enable-background:new 0 0 84.5 81;" xml:space="preserve"><g><path d="M82.6,50.6H69.9V12.3c0-8.6-7.4-11.8-11.3-12.3c-0.1,0-0.2,0-0.3,0H13.7C5.9,0,0,6.1,0,18c0,1,0.8,1.9,1.9,1.9h12.7v30.7H1.9c-1,0-1.9,0.8-1.9,1.9v23.9C0,78.9,2,81,4.5,81h78.1c1,0,1.9-0.8,1.9-1.9c0,0,0,0,0,0V52.5C84.5,51.4,83.7,50.6,82.6,50.6C82.6,50.6,82.6,50.6,82.6,50.6z M3.8,14.6c0-5.5,4.1-10.9,9.9-10.9H52c-2.2,3.8-3.7,8-4.1,12.4H3.8C3.8,16.1,3.8,18.5,3.8,14.6z M18.3,19.9h31.2c1,0,1.8-0.7,1.9-1.7c0.3-3.7,2.3-14.2,6.9-14.4c1,0.2,7.9,1.5,7.9,8.5v38.3H18.3V19.9z M80.7,77.2H4.5c-0.4,0-0.8-0.3-0.8-0.8v-22h77V77.2z"/><path d="M30.7,65.8c0,1,0.8,1.9,1.9,1.9H69c1,0,1.9-0.8,1.9-1.9c0-1-0.8-1.9-1.9-1.9H32.6C31.6,63.9,30.7,64.7,30.7,65.8z"/><path d="M21.6,63.9h-6.7c-1,0-1.9,0.8-1.9,1.9c0,1,0.8,1.9,1.9,1.9h6.7c1,0,1.9-0.8,1.9-1.9C23.5,64.7,22.6,63.9,21.6,63.9z"/></g></svg>');
-		//background-size: 90%;
+	     mask-image: svg-icon-fax();
 	}
-
 	a[itemprop="telephone"].mobile::before {
-		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 55.6 81.5" style="enable-background:new 0 0 55.6 81.5;" xml:space="preserve"><path d="M48.3,0H7.2C3.2,0,0,3.2,0,7.2v67c0,4,3.2,7.2,7.2,7.2h41.1c4,0,7.2-3.2,7.2-7.2v-67C55.6,3.2,52.3,0,48.3,0z M51.6,74.2c0,1.8-1.5,3.2-3.2,3.2H7.2C5.5,77.5,4,76,4,74.2l0-7.8h47.6L51.6,74.2z M51.6,11.8L51.6,11.8l0,50.6H4V11.8V7.2C4,5.5,5.5,4,7.2,4h41.1c1.8,0,3.2,1.5,3.2,3.2V11.8z"/><circle cx="27.8" cy="71.9" r="3.2"/></svg>');
-		background-size: 66%;
+	     mask-image: svg-icon-mobile();
 	}
-
 	a[itemprop="url"]::before {
-		background-image: url('data:image/svg+xml,<svg version="1.1" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 69.3 75.6" style="enable-background:new 0 0 69.3 75.6;" xml:space="preserve"><g><path d="M4.6,75.6h19.5c1,0,1.9-0.8,1.9-1.9V49.2h17.3v24.6c0,1,0.8,1.9,1.9,1.9h19.5c2.6,0,4.7-2.1,4.7-4.7V33.9c0-2.1-0.8-4.1-2.3-5.6L39,1.6c-2.5-2.4-6.4-2.4-8.9,0L2.3,28.2C0.8,29.7,0,31.8,0,33.9v37.1C-0.1,73.5,2.1,75.6,4.6,75.6z M3.7,33.9c0-1.1,0.5-2.2,1.2-2.9L32.7,4.3c1-1,2.6-1,3.7,0L64.3,31c0.8,0.8,1.2,1.9,1.2,2.9v37.1c0,0.6-0.4,0.9-0.9,0.9H47V47.3c0-1-0.8-1.9-1.9-1.9h-21c-1,0-1.9,0.8-1.9,1.9v24.6H4.6c-0.6,0-0.9-0.4-0.9-0.9V33.9z"/></g></svg>');
-		background-size: 85%;
+	    mask-image: svg-icon-website();
 	}
-
-	a[itemprop="telephone"]:before,
-	a[itemprop="telephone"].mobile:before,
-	a[itemprop="faxNumber"]:before,
-	a[itemprop="email"]:before,
-	a[itemprop="url"]:before {
-		width: 1.2rem;
-		height: 1.2rem;
-		background-position: bottom center;
-	}
-
+    }
 }
 
 .single-person .entry-content {
     width: 100%;
-    padding-left:  floor(math.div($grid-gutter-width, 2));
-    padding-right: ceil(math.div($grid-gutter-width, 2));
+    padding-left:  var(--width-gutter-half);
+    padding-right: var(--width-gutter-half);
     
     @media (min-width: $screen-sm) {
 	width: $container-sm;
