--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -392,6 +392,9 @@ $screen-sm-min:              $screen-sm;
 $screen-md:                  992px;
 $screen-md-min:              $screen-md;
 
+$screen-textlogo-lg:	    1100px;
+// higher breakpoint for fau textlogo
+
 $screen-lg:                  1200px;
 $screen-lg-min:              $screen-lg;
 
