UnivIS Anpassungen Weitere Icons für Twitch und arxiv

--- a/src/sass/icons/_social-media.scss
+++ b/src/sass/icons/_social-media.scss
@@ -183,10 +183,22 @@
 	    mask-image: svg-whatsapp();
 	}
 	
-	
+	// Bluesky
 	&[href*="bsky.app"]:before {
 	    mask-image: svg-bluesky();
 	}
+	
+	// Twitch
+	&[href*="twitch.tv"]:before {
+	    mask-image: svg-twitch();
+	}
+	
+	// arxiv
+	&[href*="arxiv.org"]:before {
+	    mask-image: svg-arxiv();
+	}
+	
+	
 	
 
 	// community.fau.de
