#1376 set max height and overflow y auto so when menu is taller than the viewport, a vertical scrollbar will appear

--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -491,6 +491,8 @@
 
                 @media (max-width: $screen-md) {
                     margin-top: 50px;
+                    max-height: calc(100vh - 162px);
+                    overflow-y: auto;
 
                 }
             }
