--- a/src/sass/icons/_social-media.scss
+++ b/src/sass/icons/_social-media.scss
@@ -198,6 +198,10 @@
 	    mask-image: svg-arxiv();
 	}
 	
+	// clarivate / webofscience
+	&[href*="webofscience.com"]:before {
+	    mask-image: svg-clarivate();
+	}
 	
 	
 
