--- a/print.css
+++ b/print.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.4.3
+Version: 2.4.6-1
 Requires at least: 6.2
 Tested up to: 6.3
 Requires PHP: 8.0
